Fixed RegEx errors on firefox

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,7 +5,7 @@
 body {
     height: 60vh;
     display: flex;
-    justify-content: end;
+    justify-content: initial;
     align-items: center;
     flex-direction: column;
     font-family: sans-serif;
